# life_game

./: Cargo.toml
src/: camera.rs  cell.rs  cell_spawner.rs  grid.rs  main.rs  save_manager.rs  timer.rs
